--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,12 @@
   margin: auto;
   display: grid;
 }
+
+@media only screen and (max-width: 800px) {
+  .App{
+    transform: scale(0.7, 0.7);
+    margin-top: -7%;
+    margin-right: 3%;
+    margin-left: 3%;
+  }
+}
