clean up and fix spell checker suggestions

--- a/src/pages/rebalanced-investments.styles.css
+++ b/src/pages/rebalanced-investments.styles.css
@@ -2,12 +2,12 @@ input {
   text-align: right;
 }
 
-.rebalance-section {
+.rebalanced-section {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.rebalance-section button {
+.rebalanced-section button {
   justify-content: flex-end;
 }
