--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .App-logo {
@@ -37,17 +39,24 @@
   }
 }
 
-.content {
-  width: 940px;
+.content .panel {
+  width: 80%;
   margin: auto;
   display: grid;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
   .App{
-    transform: scale(0.7, 0.7);
-    margin-top: -7%;
-    margin-right: 3%;
-    margin-left: 3%;
+    padding: 5%;
+  }
+
+  .content {
+    font-size: 15px;
+  }
+
+  .panel {
+    width: 100% !important;
+    display: grid !important;
+    grid-template-columns: 20% 80%;
   }
 }
