--- a/src/components/suggested-transfers/suggested-transfers.styles.css
+++ b/src/components/suggested-transfers/suggested-transfers.styles.css
@@ -1,6 +1,12 @@
 .movements {
   height: 340px;
-  width: 180px;
+  width: 100%;
   border: 1px solid;
   border-radius: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .rebalanced-table-td.suggested-transfers {
+    display: none;
+  }
 }
